# evmchains

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yaml  release.yaml  test.yaml
evmchains/: __init__.py  _meta.py  chains.py  types.py
scripts/: update.py
tests/: test_func.py
