[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm[toml]>=5.0"]
build-backend = "setuptools.build_meta"

[project]
name = "evmchains"
description = "Packaged metadata on Ethereum Virtual Machine (EVM) chains"
urls = {source = "https://github.com/ApeWorx/evmchains"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["ethereum", "evm", "blockchain"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.5.3,<3",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    # NOTE: black still used as a library in update.py
    "black~=23.12.1",
    "build~=1.0.3",
    "mypy~=1.8.0",
    "pytest~=7.4.4",
    "requests~=2.31.0",
    "ruff~=0.6.8",
    "setuptools-scm~=8.0.4",
    "types-requests>=2.31.0.20240106",
]

[tool.mypy]
exclude = "build/"

[tool.ruff]
# Mimic's black's default line length
line-length = 88

[tool.ruff.lint]
# Ref: https://docs.astral.sh/ruff/rules
extend-select = [
    "D",    # pydocstyle
    "E501", # Line length
    "I",    # isort
    "N",    # PEP8 naming
    "UP",   # pyupgrade
    "RUF",  # ruf-specific rules
    "W",    # warnings
]

[tool.ruff.lint.per-file-ignores]
"tests/test_*.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.setuptools_scm]
write_to = "evmchains/_meta.py"

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = "tests"
